[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiyono-llmo-generator"
version = "0.1.0"
description = "LLMO-oriented content generation system for internship coding challenge"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kiyono Project" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "streamlit>=1.37.0,<2.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "google-genai>=1.67.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "anyio>=4.4.0,<5.0.0",
]

[tool.setuptools]
packages = ["app", "frontend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
venvPath = "."
venv = ".venv"
